--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,5 @@ script:
     - codecov
     - echo -e "\x1b\x5b35;1m*** Tests complete\x1b\x5b0m"
     - echo -e "\x1b\x5b35;1m*** Starting eslint...\x1b\x5b0m"
-    - npm run lint -- -- --max-warnings 0 .
+    - npm run lint -- --max-warnings 0 .
     - echo -e "\x1b\x5b35;1m*** eslint complete\x1b\x5b0m"
