--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "extends": "enact/strict"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.4.3",
     "@enact/core": "^3.2.5",
     "@enact/i18n": "^3.2.5",
     "@enact/spotlight": "^3.2.5",
