--- a/samples/sampler/.qa-storybook/webos-meta/appinfo.json
+++ b/samples/sampler/.qa-storybook/webos-meta/appinfo.json
@@ -1,10 +1,10 @@
 {
-	"id": "com.webos.app.enactqasampler",
-	"version": "1.0.0-alpha.2",
+	"id": "com.webos.app.enactmoonstoneqasampler",
+	"version": "3.2.5",
 	"vendor": "LGE-SVL",
 	"type": "web",
 	"main": "index.html",
-	"title": "Enact QA Sampler",
+	"title": "Enact Moonstone QA Sampler",
 	"icon": "icon.png",
 	"miniicon": "icon-mini.png",
 	"largeIcon": "icon-large.png",
