update name of ui-test-utils

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "ilib": "^14.4.0 || ^14.4.0-webostv1"
   },
   "devDependencies": {
-    "enact-ui-tests": "github:enyojs/enact-ui-tests",
+    "@enact/ui-test-utils": "github:enyojs/enact-ui-tests",
     "ilib": "^14.4.0"
   }
 }
