Update eslintignore, fix sampler hint
Enact-DCO-1.0-Signed-off-by: Roy Sutton roy.sutton@lge.com

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     }
   },
   "eslintConfig": {
-    "extends": "enact/strict"
+    "extends": "enact/strict",
+    "root": true
   },
   "dependencies": {
     "@enact/core": "^3.2.5",
