--- a/samples/sampler/package.json
+++ b/samples/sampler/package.json
@@ -15,7 +15,8 @@
   },
   "license": "Apache-2.0",
   "eslintConfig": {
-    "extends": "enact/strict"
+    "extends": "enact/strict",
+    "root": true
   },
   "dependencies": {
     "@enact/core": "^3.2.5",
