--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "bootstrap": "npm link && enact link && cd samples && cd sampler && npm run bootstrap",
     "clean": "enact clean",
-    "lint": "enact lint --strict && cd tests && enact lint --local",
+    "lint": "enact lint --local",
     "sampler": "npm run --prefix samples/sampler serve",
     "test": "enact test",
     "test-ui": "wdio tests/ui/wdio.conf.js",
