Add docs validation to Travis
Enact-DCO-1.0-Signed-off-by: Roy Sutton roy.sutton@lge.com

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,6 @@ script:
     - echo -e "\x1b\x5b35;1m*** Starting eslint...\x1b\x5b0m"
     - npm run lint -- --max-warnings 0 .
     - echo -e "\x1b\x5b35;1m*** eslint complete\x1b\x5b0m"
+    - echo -e "\x1b\x5b35;1m*** Starting docs validation...\x1b\x5b0m"
+    - npm run validate-docs
+    - echo -e "\x1b\x5b35;1m*** Docs validation complete\x1b\x5b0m"
