PLAT-99243: Add screenshot tests

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "test-ui": "wdio tests/ui/wdio.conf.js",
     "test-ui-docker": "wdio tests/ui/wdio.docker.conf.js",
     "test-ui-tv": "wdio tests/ui/wdio.tv.conf.js",
+    "test-ss": "wdio tests/screenshot/wdio.conf.js",
+    "test-ss-docker": "wdio tests/screenshot/wdio.docker.conf.js",
+    "test-ss-tv": "wdio tests/screenshot/wdio.tv.conf.js",
     "test-json": "enact test --json",
     "test-watch": "enact test --watch",
     "transpile": "enact transpile"
