--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "ilib": "^14.4.0 || ^14.6.0-webos"
   },
   "devDependencies": {
-    "@enact/docs-utils": "^0.3.3",
+    "@enact/docs-utils": "0.3.2",
     "@enact/ui-test-utils": "^0.5.3",
     "eslint-config-enact-proxy": "^1.0.0",
     "ilib": "^14.4.0"
