--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enact/moonstone",
-  "version": "3.3.1",
+  "version": "4.0.0-alpha.1",
   "description": "Large-screen/TV support library for Enact, containing a variety of UI components.",
   "main": "index.js",
   "scripts": {
@@ -50,7 +50,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "recompose": "^0.26.0",
-    "warning": "^3.0.0"
+    "warning": "^3.0.0",
+    "ilib": "^14.2.0"
   },
   "peerDependencies": {
     "ilib": "^14.4.0 || ^14.6.0-webos"
