--- a/samples/perf-scroller-translate/package.json
+++ b/samples/perf-scroller-translate/package.json
@@ -39,7 +39,6 @@
     "classnames": "^2.2.6",
     "ilib": "^14.4.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "web-animations-js": "^2.3.2"
+    "react-dom": "^17.0.1"
   }
 }
