--- a/samples/perf-virtualgridlist-native/package.json
+++ b/samples/perf-virtualgridlist-native/package.json
@@ -37,7 +37,6 @@
     "@enact/ui": "^4.0.0",
     "ilib": "^14.4.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "web-animations-js": "^2.3.2"
+    "react-dom": "^17.0.1"
   }
 }
