--- a/samples/qa-fonts/package.json
+++ b/samples/qa-fonts/package.json
@@ -38,7 +38,6 @@
     "ilib": "^14.4.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "web-animations-js": "^2.3.2"
+    "react-dom": "^17.0.1"
   }
 }
