--- a/samples/qa-virtualgridlist-preserve-focus/package.json
+++ b/samples/qa-virtualgridlist-preserve-focus/package.json
@@ -40,7 +40,6 @@
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-redux": "^7.2.0",
-		"redux": "^4.0.5",
-		"web-animations-js": "^2.3.2"
+		"redux": "^4.0.5"
 	}
 }
