--- a/samples/qa-scrollernative/webos-meta/appinfo.json
+++ b/samples/qa-scrollernative/webos-meta/appinfo.json
@@ -1,12 +1,13 @@
 {
-  "id": "qa-scroller",
-  "version": "1.0.0",
+  "id": "qa-scrollernative",
+  "version": "0.1.0",
   "vendor": "LGE-SWP",
   "type": "web",
   "main": "index.html",
-  "title": "QA Scroller",
+  "title": "QA ScrollerNative",
   "icon": "icon.png",
   "miniicon": "icon-mini.png",
   "largeIcon": "icon-large.png",
-  "uiRevision": 2
+  "uiRevision": 2,
+  "useNativeScroll": true
 }
