--- a/samples/perf-scroller-native/package.json
+++ b/samples/perf-scroller-native/package.json
@@ -30,11 +30,11 @@
     "extends": "enact/strict"
   },
   "dependencies": {
-    "@enact/core": "^4.1.4",
-    "@enact/i18n": "^4.1.4",
+    "@enact/core": "^4.5.0-alpha.1",
+    "@enact/i18n": "^4.5.0-alpha.1",
     "@enact/moonstone": "../../",
-    "@enact/spotlight": "^4.1.4",
-    "@enact/ui": "^4.1.4",
+    "@enact/spotlight": "^4.5.0-alpha.1",
+    "@enact/ui": "^4.5.0-alpha.1",
     "classnames": "^2.3.1",
     "ilib": "^14.14.0",
     "react": "^18.0.0",
