--- a/samples/qa-virtualgridlistnative-preserve-focus/package.json
+++ b/samples/qa-virtualgridlistnative-preserve-focus/package.json
@@ -35,6 +35,7 @@
     "@enact/moonstone": "../../",
     "@enact/spotlight": "^4.5.0-alpha.1",
     "@enact/ui": "^4.5.0-alpha.1",
+    "@reduxjs/toolkit": "^1.7.1",
     "ilib": "^14.14.0",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
