--- a/samples/perf-scroller-native/package.json
+++ b/samples/perf-scroller-native/package.json
@@ -30,7 +30,7 @@
     "extends": "enact/strict"
   },
   "dependencies": {
-    "@enact/core": "4.5.0-rc.1",
+    "@enact/core": "^4.5.0-rc.1",
     "@enact/i18n": "^4.5.0-rc.1",
     "@enact/moonstone": "../../",
     "@enact/spotlight": "^4.5.0-rc.1",
