--- a/samples/sampler/package.json
+++ b/samples/sampler/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moonstone-sampler",
-  "version": "3.2.5",
+  "version": "4.5.0",
   "description": "Component and QA samples for Moonstone",
   "private": true,
   "main": "index.js",
@@ -20,11 +20,11 @@
     "theme": "moonstone"
   },
   "dependencies": {
-    "@enact/core": "^4.5.0-alpha.1",
-    "@enact/i18n": "^4.5.0-alpha.1",
+    "@enact/core": "^4.5.0-rc.1",
+    "@enact/i18n": "^4.5.0-rc.1",
     "@enact/moonstone": "../../",
-    "@enact/spotlight": "^4.5.0-alpha.1",
-    "@enact/ui": "^4.5.0-alpha.1",
+    "@enact/spotlight": "^4.5.0-rc.1",
+    "@enact/ui": "^4.5.0-rc.1",
     "classnames": "^2.3.1",
     "ilib": "^14.14.0",
     "query-string": "^7.0.1",
