--- a/package.json
+++ b/package.json
@@ -39,16 +39,16 @@
     "extends": "enact-proxy/strict"
   },
   "dependencies": {
-    "@enact/core": "^4.5.0-rc.1",
-    "@enact/i18n": "^4.5.0-rc.1",
-    "@enact/spotlight": "^4.5.0-rc.1",
-    "@enact/ui": "^4.5.0-rc.1",
+    "@enact/core": "^4.5.0",
+    "@enact/i18n": "^4.5.0",
+    "@enact/spotlight": "^4.5.0",
+    "@enact/ui": "^4.5.0",
     "classnames": "^2.3.1",
     "invariant": "^2.2.4",
     "prop-types": "^15.8.1",
     "ramda": "^0.28.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "warning": "^4.0.3",
     "ilib": "^14.14.0"
   },
