--- a/samples/sampler/package.json
+++ b/samples/sampler/package.json
@@ -32,9 +32,9 @@
   },
   "devDependencies": {
     "@enact/storybook-utils": "^4.2.0",
-    "@storybook/addons": "^6.3.12",
-    "@storybook/react": "^6.3.12",
-    "@storybook/theming": "^6.3.12",
+    "@storybook/addons": "6.3.12",
+    "@storybook/react": "6.3.12",
+    "@storybook/theming": "6.3.12",
     "babel-loader": "^8.2.3",
     "core-js": "^3.20.1"
   }
