--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "@enact/moonstone",
   "version": "4.5.0",
   "description": "Large-screen/TV support library for Enact, containing a variety of UI components.",
+  "repository": "https://github.com/enactjs/moonstone",
+  "homepage": "https:enactjs.com",
   "main": "index.js",
   "scripts": {
     "bootstrap": "enact bootstrap",
