--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "4.5.0",
   "description": "Large-screen/TV support library for Enact, containing a variety of UI components.",
   "repository": "https://github.com/enactjs/moonstone",
-  "homepage": "https:enactjs.com",
+  "homepage": "https://enactjs.com",
   "main": "index.js",
   "scripts": {
     "bootstrap": "enact bootstrap",
