--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "@enact/moonstone",
   "version": "4.5.0",
   "description": "Large-screen/TV support library for Enact, containing a variety of UI components.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/enactjs/moonstone.git"
+  },
+  "homepage": "https://enactjs.com",
   "main": "index.js",
   "scripts": {
     "bootstrap": "enact bootstrap",
