--- a/samples/perf-scroller-native/package.json
+++ b/samples/perf-scroller-native/package.json
@@ -30,13 +30,13 @@
     "extends": "enact/strict"
   },
   "dependencies": {
-    "@enact/core": "^4.5.0",
-    "@enact/i18n": "^4.5.0",
+    "@enact/core": "^4.5.2",
+    "@enact/i18n": "^4.5.2",
     "@enact/moonstone": "../../",
-    "@enact/spotlight": "^4.5.0",
-    "@enact/ui": "^4.5.0",
+    "@enact/spotlight": "^4.5.2",
+    "@enact/ui": "^4.5.2",
     "classnames": "^2.3.1",
-    "ilib": "14.14.0",
+    "ilib": "^14.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
