--- a/samples/sampler/package.json
+++ b/samples/sampler/package.json
@@ -26,7 +26,7 @@
     "@enact/spotlight": "^4.5.2",
     "@enact/ui": "^4.5.2",
     "classnames": "^2.3.2",
-    "ilib": "14.15.1",
+    "ilib": "^14.15.1",
     "query-string": "^7.1.1",
     "react": "^18.2.0"
   },
