--- a/samples/sampler/package.json
+++ b/samples/sampler/package.json
@@ -36,7 +36,7 @@
     "@storybook/addons": "^6.5.14",
     "@storybook/builder-webpack5": "^6.5.14",
     "@storybook/manager-webpack5": "^6.5.14",
-    "@storybook/react": "6.5.14",
+    "@storybook/react": "^6.5.14",
     "@storybook/theming": "^6.5.14",
     "babel-loader": "^8.2.5",
     "core-js": "^3.26.0"
