--- a/samples/sampler/package.json
+++ b/samples/sampler/package.json
@@ -28,13 +28,16 @@
     "classnames": "^2.3.2",
     "ilib": "^14.15.1",
     "query-string": "^7.1.1",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@enact/storybook-utils": "^4.2.0",
-    "@storybook/addons": "6.3.12",
-    "@storybook/react": "6.3.12",
-    "@storybook/theming": "6.3.12",
+    "@enact/storybook-utils": "^5.0.2",
+    "@storybook/addons": "^6.5.14",
+    "@storybook/builder-webpack5": "^6.5.14",
+    "@storybook/manager-webpack5": "^6.5.14",
+    "@storybook/react": "^6.5.14",
+    "@storybook/theming": "^6.5.14",
     "babel-loader": "^8.2.5",
     "core-js": "^3.26.0"
   }
