--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ dist: focal
 language: node_js
 node_js:
     - lts/*
-    - "18"
+    - node
 sudo: false
 before_install:
     - sudo apt-get update
