--- a/samples/sampler/package.json
+++ b/samples/sampler/package.json
@@ -16,6 +16,9 @@
     "serve-qa": "start-storybook -p 8080 -c .qa-storybook --ci"
   },
   "license": "Apache-2.0",
+  "engines": {
+    "node": ">=14.15.0"
+  },
   "enact": {
     "theme": "moonstone"
   },
@@ -24,14 +27,14 @@
     "@enact/i18n": "^4.7.1",
     "@enact/moonstone": "../../",
     "@enact/spotlight": "^4.7.1",
-    "@enact/storybook-utils": "^5.0.4",
+    "@enact/storybook-utils": "^5.1.0",
     "@enact/ui": "^4.7.1",
     "@storybook/addons": "^6.5.16",
     "@storybook/builder-webpack5": "^6.5.16",
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^6.5.16",
     "@storybook/theming": "^6.5.16",
-    "babel-loader": "^8.3.0",
+    "babel-loader": "^9.1.2",
     "classnames": "^2.3.2",
     "ilib": "^14.17.0",
     "react": "^18.2.0",
