updated devDep for storybook-utils

--- a/samples/sampler/package.json
+++ b/samples/sampler/package.json
@@ -24,7 +24,7 @@
     "@enact/i18n": "^4.7.1",
     "@enact/moonstone": "../../",
     "@enact/spotlight": "^4.7.1",
-    "@enact/storybook-utils": "^5.1.0",
+    "@enact/storybook-utils": "github:enactjs/storybook-utils#feature/WRP-17866",
     "@enact/ui": "^4.7.1",
     "@storybook/addons": "^6.5.16",
     "@storybook/builder-webpack5": "^6.5.16",
